src/test/ui/borrowck/borrowck-move-out-of-tuple-struct-with-dtor.stderr
error[E0509]: cannot move out of type `S`, which implements the `Drop` trait
  --> $DIR/borrowck-move-out-of-tuple-struct-with-dtor.rs:8:9
   |
LL |         S(_s) => {}
   |         ^^--^
   |         | |
   |         | hint: to prevent move, use `ref _s` or `ref mut _s`
   |         cannot move out of here

error[E0509]: cannot move out of type `S`, which implements the `Drop` trait
  --> $DIR/borrowck-move-out-of-tuple-struct-with-dtor.rs:14:9
   |
LL |     let S(_s) = S("foo".to_string());
   |         ^^--^
   |         | |
   |         | hint: to prevent move, use `ref _s` or `ref mut _s`
   |         cannot move out of here

error[E0509]: cannot move out of type `S`, which implements the `Drop` trait
  --> $DIR/borrowck-move-out-of-tuple-struct-with-dtor.rs:18:19
   |
LL | fn move_in_fn_arg(S(_s): S) {
   |                   ^^--^
   |                   | |
   |                   | hint: to prevent move, use `ref _s` or `ref mut _s`
   |                   cannot move out of here

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0509`.
